<resources>
    <string name="app_name">Mean Minesweeper</string>
    <string name="main_activity_title">Mean Minesweeper</string>
    <string name="gaming_activity_title">Minesweeping</string>
    <string name="tv_mine_space_size">尺寸: </string>
    <string name="tv_mine_num">雷数： </string>
    <string name="tv_x"> x </string>
    <string name="bt_start">开始</string>
    <string name="bt_restart">结束</string>
    <string name="str_int">%d</string>
    <string name="str_0_int">0%d</string>
    <string name="size_too_small">尺寸不小于9x9</string>
    <string name="size_too_big">尺寸不大于24x30</string>
    <string name="mineNum_too_less">雷数应不小于10</string>
    <string name="mineNum_too_much">雷数过多</string>
    <string name="time_divider">:</string>
    <string name="time_zero">00:00</string>
    <string name="title_activity_settings">设置</string>
    <string name="drawer_menu_game">游戏</string>
    <string name="drawer_menu_option">选项</string>
    <string name="drawer_menu_share">分享</string>
    <string name="share_title">分享</string>
    <string name="share_content">Mean Minesweeper!\ngithub.com/meanfan/MeanMinesweeper</string>


    <string name="drawer_menu_quit">退出</string>

    <string name="str_function_closed">未开放</string>

    <string name="str_easy">简单</string>
    <string name="str_normal">普通</string>
    <string name="str_hard">困难</string>
    <string name="str_customize">自定义</string>
    <string name="card_content_detail_easy">9x9大小    10地雷</string>
    <string name="card_content_detail_normal">16x16大小  40地雷</string>
    <string name="card_content_detail_hard">30x16大小 100地雷</string>
    <string name="card_content_detail_customize">自定义大小和雷数</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main">Mean Minesweeper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mean Minesweeper</string>
    <string name="nav_header_subtitle">github.com/meanfan/MeanMinesweeper</string>
    <string name="nav_header_desc"></string>
    <string name="action_settings">设置</string>
</resources>
