<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_game"
            android:icon="@drawable/ic_menu_game"
            android:title="@string/drawer_menu_game" />
    </group>

    <group android:checkableBehavior="none">
            <item
                android:id="@+id/nav_option"
                android:icon="@drawable/ic_menu_option"
                android:title="@string/drawer_menu_option" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/drawer_menu_share" />
            <item
                android:id="@+id/nav_quit"
                android:icon="@drawable/ic_menu_close"
                android:title="@string/drawer_menu_quit" />
    </group>

</menu>
