<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/layout_ctrl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_mine_space_size"/>
        <EditText
            android:id="@+id/et_colNum"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_x"/>
        <EditText
            android:id="@+id/et_rowNum"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_mine_num"/>
        <EditText
            android:id="@+id/et_mineNum"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/bt_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_start"/>
    </LinearLayout>
    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ScrollView
            android:id="@+id/sv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </ScrollView>
    </HorizontalScrollView>
</LinearLayout>
